# AI-Stock-Analyst

./: .gitignore  README.md  app.py  indian-tips.md  pyproject.toml  requirements.txt  test_kickoff.py
src/stock_analysis/: crew.py
src/stock_analysis/config/: tasks.yaml
src/stock_analysis/tools/: calculator_tool.py  yfinance_tools.py
